--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,9 +17,11 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
-  font-size: 24px;
+  font-size: 12px;
+  font-family: Bungee;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
