--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,11 +15,35 @@ html {
  */
 
 body {
-  color: #545149;
-  background-color: #f4f1ec;
-  font-size: 12px;
+  border: 2px solid gray;
+  display : flex;
+  align-items: center;
+  color: #accece;
+  background-color: #a8abb5;
+  font-size: 24px;
+  justify-content: center;
   font-family: Bungee;
+  margin-top: 140px;
 }
+
+main {
+  border: 2px solid gray;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-right: 5%;
+  margin-left: 5%;
+
+}
+
+
+
+.container {
+  border: 2px solid gray;
+  display: flex;
+}
+
+
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
