--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -2,20 +2,22 @@
     border: 2px solid gray;
     display: flex;
     flex-direction: column;
+    height: 400px;
 
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: bisque;
 }
 .userbox {
    
     border: 2px solid gray;
-    display: block;
-    flex-direction: column;
-    width: 500 px;
-    height: 500 px;
-    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    height: 400px;
+
+    justify-content:flex-start;
     align-self: center;
+    background-color: bisque;
+
 
 }
