--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -23,7 +23,6 @@
     display: flex;
     flex-direction: row ;
     width: 100%;
-
     
 }
 
@@ -62,6 +61,11 @@
     
 }
 
+.handle.hover {
+    filter: brightness(100%);
+
+}
+
 #tweet-list {
     margin-top: 2em;
     width: 100%; 
@@ -84,7 +88,6 @@ ul {
 .tweet {
     border: 4px solid black;
     padding: 1em;
-
 }
 .tweet-footer {
     display: flex;
