--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,5 +1,4 @@
 .user {
-    border: 2px solid gray;
     display: flex;
     flex-direction: column;
     height: 400px;
@@ -7,17 +6,39 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: -1px;
 }
 .userbox {
    
-    border: 2px solid gray;
     flex-direction: row;
-    width: 100%;
     height: 400px;
 
     justify-content:flex-start;
     align-self: center;
-    background-color: bisque;
-
-
+    background-color: salmon;
 }
+
+
+@media only screen and (min-width: 1024px) {
+    .header-container {
+        display: flex;
+        justify-content: space-between;      
+        
+    }
+    .container {
+        flex: 1;
+
+    }
+    .nav {
+        background-color: #4056A1;
+    }
+
+    .userbox {
+        align-self: initial;
+        height: 400px;
+        margin: 200px;
+
+    }
+    
+}
+
