--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,12 +15,11 @@ html {
  */
 
 body {
-  border: 2px solid gray;
   display : flex;
   flex-direction: column;
   align-items: center;
-  color: #accece;
-  background-color: #a8abb5;
+  color: rgb(105, 57, 12);
+  background-color: rgb(239, 240, 236);
   font-size: 24px;
   justify-content: center;
   font-family: Bungee;
@@ -29,17 +28,21 @@ body {
 }
 
 main {
-  border: 2px solid gray;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: flex-start;
-  width: 90%;
+  margin-right: 5%;
+  margin-left: 5%;
+  /* width: 90%; */
+}
+
+textarea {
+  border : none;
 }
 
 
 .container {
-  border: 2px solid gray;
   display: row;
 }
 
@@ -66,6 +69,15 @@ h2 {
   border: 2px solid gray;
   max-width: 80px;
   max-height: 80px;
+}
+
+#message-too-long-alert {
+  display: none;
+  color: black;
+ }
+
+.tweet-body {
+  overflow-wrap: anywhere;
 }
 
 /*
