adresses empty tweet box alert

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -76,6 +76,12 @@ h2 {
   color: black;
  }
 
+ #empty-tweet-box-alert{
+  display: none;
+  color: black;
+ }
+
+
 .tweet-body {
   overflow-wrap: anywhere;
 }
